--- a/INSTALL
+++ b/INSTALL
@@ -1,20 +1,28 @@
-Installation Instructions
-*************************
+# Installation Instructions
 
-1. Required Packages
-=========================
-On Debian system, you can install dependencies with the following command:
-  $ sudo apt-get install python3-gi python3-gi-cairo libgtk-3-0 libglib2.0-dev intltool
+1. __Required Packages__
 
-2. Install
-=========================
-You can install with the following commands
-  $ ./configure
-  $ make
-  $ sudo make install
+  On Debian system, you can install dependencies with the following command:
 
-You can also use development PPA on Ubuntu
-  $ sudo apt-add-repository ppa:vbkaisetsu/glogic-daily
-  $ sudo apt-get update
-  $ sudo apt-get install glogic
+  ```bash
+  sudo apt-get install python3-gi python3-gi-cairo libgtk-4-0 intltool
+  ```
 
+2. __Install__
+
+  You can install with the following commands
+
+  ```bash
+    ./configure
+    make
+    sudo make install
+  ```
+
+Or install using __snap__
+
+```bash
+snap install GLogic --edge
+```
+
+Or install using __flatpak__
+> Coming soon
